--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,28 +31,47 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const earlyInventors = inventors.filter(inv => (inv.year >= 1500 && inv.year <= 1600))
+    console.table(earlyInventors)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const fullNames = inventors.map(inv => `${inv.first} ${inv.last}`)
+    console.table(fullNames)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sortedByBirth = inventors.sort((pre, desc) => pre.year < desc.year ? -1 : pre.year > desc.year ? 1 : 0)
+    console.table(sortedByBirth)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const ageSum = inventors.reduce((acc, val) => acc + (val.passed - val.year), 0)
+    console.log('ageSum', ageSum)
 
     // 5. Sort the inventors by years lived
+    const sortByAge = inventors.sort((pre, desc) => (pre.passed - pre.year) < (desc.passed - desc.year) ? -1 : 1)
+    console.table(sortByAge)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // has to be done inside the console
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const sortedPeople = people.sort((pre, desc) => pre.split(', ')[1] < desc.split(', ')[1] ? -1 : 1)
+    console.table(sortedPeople)
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+const sumInstances = data.reduce((obj, item) => {
+  if(!obj[item]) obj[item] = 0
+  obj[item]++
+  return obj
+}, {})
+console.table(sumInstances)
 
   </script>
 </body>
