--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -25,16 +25,32 @@
     ];
 
     // Some and Every Checks
+    const ninteenOrOlder = p => {
+      const currentYear = (new Date()).getFullYear()
+      return currentYear - p.year >= 19
+    }
     // Array.prototype.some() // is at least one person 19 or older?
+    console.log('at least one person is 19 = ', people.some(ninteenOrOlder))
     // Array.prototype.every() // is everyone 19 or older?
+    console.log('everyone is 19 or older = ', people.every(ninteenOrOlder))
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const getCommentById = c => c.id === 823423
+    console.log(comments.find(getCommentById))
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const index = comments.findIndex(getCommentById)
+    console.log(comments.filter((c, i) => i != index))
+    // Alternatively:
+    const newComments = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ]
+    console.log(newComments)
 
   </script>
 </body>
