--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,56 @@
     }
 
     // Regular
+    console.log('hi')
 
     // Interpolated
+    console.log('Hi, %s', 'Theo')
 
     // Styled
+    console.log('%c I am some great text', 'font-size: 50px' )
 
     // warning!
+    console.warn('Oh  Nooo')
 
     // Error :|
+    const p = document.querySelector('p')
+    console.error(p.classList.contains('ouch'), 'That is wrong')
 
     // Info
+    console.info('Cool stuff')
 
     // Testing
+    console.assert(1 === 1, 'That is wrong')
 
     // clearing
+    console.clear()
 
     // Viewing DOM Elements
+    console.dir(p)
+
+    console.clear()
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`)
+      console.log(`This is ${dog.name}`)
+      console.log(`${dog.name} is ${dog.age} years old`)
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`)
+      console.groupEnd(`${dog.name}`)
+    })
 
     // counting
+    console.count('Snickers')
+    console.count('Snickers')
 
     // timing
+    console.time('fetching data')
+    fetch('https://api.github.com/users/on3iro')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data')
+        console.log(data)
+      })
 
   </script>
 </body>
