--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -99,6 +99,28 @@
   </div>
 
 <script>
+const checkboxes = [ ...document.querySelectorAll('.inbox input[type="checkbox"]') ]
+
+let lastChecked
+
+const handleCheck = (e) => {
+  // Check if they had the shif key down
+  // And check that they are checking the box
+  let inBetween = false
+
+  if(e.shiftKey && e.target.checked) {
+    checkboxes.map(box => {
+      inBetween = (box === e.target || box === lastChecked) ? !inBetween : inBetween
+
+      if (inBetween) box.checked = true
+    })
+  }
+
+  lastChecked = e.target
+}
+
+checkboxes.map(box => box.addEventListener('click', handleCheck))
+
 </script>
 </body>
 </html>
