--- a/13 - Slide in on Scroll/index-START.html
+++ b/13 - Slide in on Scroll/index-START.html
@@ -58,6 +58,28 @@
       };
     }
 
+    const sliderImages = [ ...document.querySelectorAll('.slide-in') ]
+    const checkSlide = e => {
+      sliderImages.map(img => {
+        // The innerHeight needs to be added, to determine the
+        // lower window boundary instead of the top Y
+        // slideInAt = half way through the image
+        const slideInAt = (window.scrollY + window.innerHeight) - img.height / 2
+        // Bottom of the image
+        const imgBottom = img.offsetTop + img.height
+        const isHalfShown = slideInAt > img.offsetTop
+        const isNotScrolledPast = window.scrollY < imgBottom
+
+        if (isHalfShown && isNotScrolledPast) {
+          img.classList.add('active')
+        } else {
+          img.classList.remove('active')
+        }
+      })
+    }
+
+    window.addEventListener('scroll', debounce(checkSlide))
+
   </script>
 
   <style>
