--- a/17 - Sort Without Articles/index-START.html
+++ b/17 - Sort Without Articles/index-START.html
@@ -46,7 +46,13 @@
 <script>
 const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
 
+const reArticles = /^(The\s|A\s|An\s)/i
+const sortedBands = bands.map(band => {
+  return band.replace(reArticles, '').trim()
+}).sort()
 
+document.querySelector('#bands').innerHTML =
+  sortedBands.map(band => `<li>${band}</li>`).join('')
 </script>
 
 </body>
