--- a/18 - Adding Up Times with Reduce/index-START.html
+++ b/18 - Adding Up Times with Reduce/index-START.html
@@ -182,6 +182,21 @@
     </li>
   </ul>
 <script>
+const timeNodes = [ ...document.querySelectorAll('[data-time]') ]
+const timeSum = timeNodes.reduce((sum, timeItem) => {
+  const timeString = timeItem.dataset.time
+  const [mins, secs] = timeString.split(':').map(parseFloat)
+  const seconds = (mins * 60) + secs
+
+  return sum + seconds
+}, 0)
+
+let secondsLeft = timeSum
+const hours = Math.floor(secondsLeft / 3600)
+secondsLeft = secondsLeft % 3600
+const minutes = Math.floor(secondsLeft / 60)
+secondsLeft = secondsLeft % 60
+console.log(`${hours}:${minutes}:${secondsLeft}`)
 </script>
 </body>
 </html>
